--- a/requirements.txt
+++ b/requirements.txt
@@ -37,10 +37,10 @@ pynewtonmath
 fontTools
 Python_ARQ
 pyrogram
-aiohttp>=2.2.5
 TgCrypto
 search_engine_parser
 secureme
 telegraph
 pymongo
 envparse
+asyncio
