--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,10 @@ dnspython
 hachoir
 numpy
 nekos.py
+bing_image_downloader
+emoji-country-flag
+countryinfo
+youtube-dl
+youtube_search_python
+youtube_search
+git+https://github.com/ytdl-org/youtube-dl.git
