--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "manager",
     "Zeldris"
   ],
-  "repository": "https://github.com/IDN-C-X/ZeldrisRobot.git",
+  "repository": "https://github.com/Auramoon55/voilet.git",
   "website": "https://idn-c-x.github.io",
   "success_url": "t.me/IDNCoder",
   "addons": [
