--- a/app.json
+++ b/app.json
@@ -89,6 +89,12 @@
       "required": false,
       "value": ""
     },
+    "MONGO_DB_URI": {
+      "description": "MONGO DB URI from mongo",
+      "required": true,
+      "value": ""
+    },
+
     "WHITELIST_USERS": {
       "description": "ID of users who are Devs of your bot (can use /py etc.). If you are a noob and would come and bother Masha support then keep the current ID's here at they are and add yours.",
       "required": false,
